2010-01-09  Wolfgang Lux  <wolfgang.lux@mail.com>

	* Source/NSTextView.m (-performDragOperation:): Fix a bug that
	prevented changing the color of the selected text of a text view
	via drag and drop.

2010-01-08 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSScroller: init scrollerWidth to 0.0, so that GSTheme
	can properly override it.

2010-01-06 Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFConsumer.m (RTFDConsumer-appendImage:):
	Set the icon of the file wrapper to the image.

2010-01-05 Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFConsumer.m (-parseRTF:...class:): Try to
	determine the encoding of the RTF data.

2010-01-05 03:39-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSMenu.m: Do not show the menu at the top of the screen in 
	NSWindows95InterfaceStyle mode.  

2010-01-04 00:25-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSWindowDecorationView.[hm]: Addition of ivars to track
	if a toolbar or menu is present in the window decorations.  Modified
	code to set these to YES/NO.

2010-01-04 Riccardo Mottola <rmottola@users.sf.net>

	* Source/GSWindowDecorationView.m: When adding a toolbar take in account
	the possibly existing in-window menu.
	When removing the in-window menu take care of shifitng the toolbar view up.

2010-01-03 German Arias <german@xelalug.org>

	* Source/NSPrintPanel.m,
	* Source/NSPrintOperation.m,
	* Source/GSThemeInspector.m: Added missing internationalisation, now is
        completed (or so I hope).
	* Resources/Spanish.lproj/Localizable.strings: More strings in spanish
        (with this the translation to spanish is finished).

2010-01-03 Fred Kiefer <FredKiefer@gmx.de>

	* Resources/English.lproj/Localizable.strings: Regenerate this file.
	* Resources/German.lproj/Localizable.strings: Regnerate and add
	some translations.

2010-01-03 German Arias <german@xelalug.org>

	* Panels/Spanish.lproj/GSPageLayout.gorm/objects.gorm,